monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0804/A0804a.java
/* (c) https://github.com/MontiCore/monticore */
private void method ();
